--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.cdnfonts.com/css/torus-pro');
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -28,7 +30,8 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
+    --radius: 0.5rem;
+    font-family: 'Torus Pro', sans-serif;
   }
   .dark {
     --background: 20 14.3% 4.1%;
